# pyeqsp

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
doc/: conf.py  maintenance_guide.md
doc/maintainer/: release_notes.md  release_roadmap.md  technical_symmetry.md
doc/user/: installation.md
release/: build_dist.py
validation/: verify_all.py
