[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeqsp"
version = "1.0b2"
description = "Python Equal Area Sphere Partitioning Library"
readme = "README.md"
authors = [
  { name = "Paul Leopardi", email = "paul.leopardi@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
requires-python = ">=3.11"

[project.optional-dependencies]
mayavi = [
    "mayavi",
    "PyQt5",
]
docs = [
    "sphinx>=5.0",
    "sphinx_rtd_theme",
    "myst_parser",
    "sphinxcontrib-mermaid",
    "sphinx-version-warning",
]
dev = [
    "ruff",
    "pylint",
    "pytest",
    "coverage",
    "build",
    "twine",
    "pre-commit",
]

[project.urls]
"Homepage" = "http://eqsp.sourceforge.net"
"Repository" = "https://github.com/penguian/pyeqsp"
"Beta Feedback" = "https://github.com/penguian/pyeqsp/discussions/categories/beta-testing"
# NOTE: Update "Repository" if SourceForge becomes the primary repo.

[tool.setuptools.packages.find]
where = ["."]
include = ["eqsp*"]

[tool.pytest.ini_options]
testpaths = ["tests/src", "examples/user-guide/src"]
filterwarnings = [
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore:.*__array_wrap__ must accept context.*:DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--doctest-modules"

[tool.pylint.format]
max-line-length = 88
